# notebook

./: .gitignore  README.md  api.py  app.py  note.py  pyproject.toml  stream.py
src/: api.py  app.py  stream.py
templates/: index.html  note.html
