[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "flask>=3.1.0",
    "streamlit>=1.42.0",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
fast-app = "api:app"
stream-app = "stream:run"
flask-app = "app:run"